<resources>
    <string name="app_name">Assignment_300cem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="no_account">No account?</string>
    <string name="registered">Registered already?</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="night_mode">Night mode</string>
    <string name="pls_login">Please login</string>
    <string name="logout_msg">You have been logout</string>
    <string name="phone_num">Phone Number</string>
    <string name="pwd">Password</string>
    <string name="username">Username</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="login_missing_msg">Please enter your phone number and password</string>
    <string name="login_wait_msg">Logging in...</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="login_wrong_msg">Incorrect phone number or password</string>
    <string name="login_ok_msg">Login successful</string>
    <string name="buddy">" buddy"</string>
    <string name="all_posts">All comments</string>
    <string-array name="areas">
        <item>Hong Kong</item>
        <item>Kowloon</item>
        <item>New Territories</item>
    </string-array>
    <string-array name="districts">
        <item>@string/all_posts</item>
        <item>Central and Western District</item>
        <item>Wan Chai</item>
        <item>Eastern District</item>
        <item>Southern District</item>
        <item>Yau Tsim Mong</item>
        <item>Sham Shui Po</item>
        <item>Kowloon City</item>
        <item>Wong Tai Sin</item>
        <item>Kwun Tong</item>
        <item>Kwai Tsing</item>
        <item>Tsuen Wan</item>
        <item>Tuen Mun</item>
        <item>Yuen Long</item>
        <item>North District</item>
        <item>Tai Po</item>
        <item>Sha Tin</item>
        <item>Sai Kung</item>
        <item>Islands District</item>
    </string-array>
    <string name="register_missing_msg">Please enter all the required information</string>
    <string name="pwd_confirm_notmatch">Password confirmation doesn\'t match</string>
    <string name="register_wait_msg">Registering...</string>
    <string name="register_ok_msg">Register successful! You can now login</string>
    <string name="register_fail_msg">This phone number already register</string>
    <string name="pls_select_district">Please select a district first</string>
    <string name="new_post">New comment</string>
    <string name="confirm">Confirm</string>
    <string name="write_sth">Write something</string>
    <string name="post_ok_msg">Comment Added</string>
    <string name="perm">Permissions</string>
    <string name="granted_perm">Permissions granted</string>
    <string name="grant">Grant</string>
    <string name="update_loc">Updating location</string>
    <string name="gps_off">GPS is not enabled</string>
    <string name="pls_perm">Please give permission in settings</string>
</resources>